# CRML

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml
crml/api/: app.py
crml/api/routes/: data.py  health.py  inference.py  models.py  task.py
crml/config/: settings.py
crml/core/: logging.py
crml/ha/: discovery.py
crml/llm/: client.py  planner.py  prompts.py
crml/mqtt/: client.py  handlers.py
crml/pipeline/: store.py
crml/registry/: model.py  registry.py
tests/: conftest.py  test_api.py  test_config.py  test_ha_discovery.py  test_handlers.py  test_llm.py  test_registry.py  test_store.py
